refactor/OpenEO : update Test